# vcal

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  package.xml  vcalConfig.cmake.in
examples/: DepthVisualControl.cpp  MonoVisualControl.cpp  MonoVisualcontrol.cpp
include/vcal/: PID.h  VisualControlScheme.cpp  VisualControlScheme.h
src/: PID.cpp  VisualControlScheme.cpp
tools/: CMakeLists.txt
tools/log_parsing/: LogParser.py  parse_script.py  plot.py
tools/mouse_encoder/: mouse_encoder.ino
tools/pid_tune_gui/: ParamWidget.cpp  ParamWidget.h  PidTuneGui.cpp  PidTuneGui.h  main.cpp
tools/python_pid_wheel/: python_pid_wheel.py
